--- a/app/views/application/_kullanicipaneli.html.erb
+++ b/app/views/application/_kullanicipaneli.html.erb
@@ -2,7 +2,7 @@
 	<ul>
 
 		<% if current_user!=nil %>
-		<li class='birincimenu active has-sub'>
+		<li class='birincimenu  has-sub'>
 			<a href='#'><span>Kullanıcı
 				Paneli</span></a>
 			<ul>
@@ -34,7 +34,7 @@
 		</li>
 		<%end %>
 
-		<li class='has-sub'>
+		<li class='ikincimenu has-sub'>
 			<a href='#'><span>Kategoriler</span></a>
 			<ul>
 				<li>
@@ -53,7 +53,7 @@
 				
 			</ul>
 		</li>
-		<li class='has-sub'>
+		<li class='ucuncumenu has-sub'>
 			<a href=''><span>Fırsatlar
 				Paneli</span></a>
 			<ul>
@@ -195,7 +195,7 @@
 
 	});
 	
-$(".birincimenu > ul").slideDown(0);
+
 	
 
 
