--- a/app/views/application/_headerfixed.html.erb
+++ b/app/views/application/_headerfixed.html.erb
@@ -8,7 +8,7 @@
 
 	</div>
 	
-	<div class="hidden-xs hidden-sm" style="float:right;">
+	<div id="birincikisim" class="hidden-xs hidden-sm" style="float:right;">
 
 			<!-- Login Starts Here -->
 			<%= render "loginContainer" %>
